--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.render-pipelines.universal": "17.0.4",
     "jp.keijiro.klutter-tools": "2.4.3",
     "jp.keijiro.metatex": "1.0.5",
+    "jp.keijiro.vfxgraphassets": "3.10.0",
     "com.unity.modules.uielements": "1.0.0"
   },
   "scopedRegistries": [
