--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.inputsystem": "1.14.2",
     "com.unity.render-pipelines.universal": "17.0.4",
+    "jp.keijiro.klak.spout": "2.0.4",
     "jp.keijiro.klutter-tools": "2.4.3",
     "jp.keijiro.metatex": "1.0.5",
     "jp.keijiro.vfxgraphassets": "3.10.0",
