--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.render-pipelines.universal": "17.0.4",
     "jp.keijiro.danish-statues": "1.0.0",
     "jp.keijiro.klak.motion": "1.1.0",
+    "jp.keijiro.klak.ndi": "2.1.5",
     "jp.keijiro.klak.spout": "2.0.4",
     "jp.keijiro.klutter-tools": "2.4.3",
     "jp.keijiro.metatex": "1.0.5",
